WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151475
Back-buffer to front-buffer copy fails for some buffer formats
https://bugs.webkit.org/show_bug.cgi?id=151475
Summary
Back-buffer to front-buffer copy fails for some buffer formats
Simon Fraser (smfr)
Reported
2015-11-19 19:19:15 PST
Back-buffer to front-buffer copy fails for some buffer formats
Attachments
Patch
(9.62 KB, patch)
2015-11-19 19:25 PST
,
Simon Fraser (smfr)
thorton
: review+
thorton
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-11-19 19:25:58 PST
Created
attachment 265929
[details]
Patch
Tim Horton
Comment 2
2015-11-19 19:29:15 PST
Comment on
attachment 265929
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=265929&action=review
> Source/WebKit2/Shared/mac/RemoteLayerBackingStore.mm:339 > + if (m_isOpaque)
Fill after the back buffer copy???
Tim Horton
Comment 3
2015-11-19 19:38:22 PST
No CQ, it doesn't build. Also, it seems to me like the fill is in the wrong place and opaque layers will be very red when repainted in debug builds.
Simon Fraser (smfr)
Comment 4
2015-11-20 11:15:20 PST
Comment on
attachment 265929
[details]
Patch Tim really meant r-
Tim Horton
Comment 5
2015-11-20 11:46:10 PST
The problems weren't really big enough for that :D
Simon Fraser (smfr)
Comment 6
2015-11-20 12:07:33 PST
rdar://problem/23617899
https://trac.webkit.org/r192689
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug